fixed footer alignment

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -122,7 +122,9 @@ a{
   }
   p{
     color:#373737;
-    margin-top:20px;
+    @include breakpoint(md) {
+      margin-top:20px;
+    }
     a{
       color:#373737;
       text-decoration:none;
